--- a/react-app/package.json
+++ b/react-app/package.json
@@ -32,8 +32,8 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "format": "prettier --write src/**/*.ts{,x}",
-        "lint": "tsc --noEmit && eslint src/**/*.ts{,x}",
-        "eslintfix": "eslint --fix src/**/*.ts{,x}\"",
+        "eslint": "tsc --noEmit && eslint src/**/*.ts{,x}",
+        "eslint:fix": "eslint --fix src/**/*.ts{,x}\"",
         "watch:sass": "node-sass src/assets/sass/main.sass src/assets/css/style.css -w"
     },
     "eslintConfig": {
