--- a/react-app/package.json
+++ b/react-app/package.json
@@ -13,6 +13,7 @@
         "@types/react": "^16.9.41",
         "@types/react-dom": "^16.9.8",
         "@types/react-redux": "^7.1.9",
+        "@types/react-router": "^5.1.8",
         "@types/react-router-dom": "^5.1.5",
         "axios": "^0.19.2",
         "history": "^5.0.0",
@@ -21,6 +22,7 @@
         "react-dom": "^16.13.1",
         "react-hook-form": "^6.4.0",
         "react-redux": "^7.2.0",
+        "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.1",
         "redux": "^4.0.5",
