Added checkout page, order creation and stripe payment

--- a/react-app/.env.development
+++ b/react-app/.env.development
@@ -4,3 +4,6 @@ SKIP_PREFLIGHT_CHECK=true
 # Api server url
 REACT_APP_API_URL=http://localhost:5000/api
 
+# Stripe public key
+STRIPE_PUBLIC_KEY=pk_test_XekBDuUTsqK2y3u8ETkTsg9k007BGBHrUK
+
