--- a/react-app/package.json
+++ b/react-app/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@hookform/error-message": "0.0.4",
+        "@stripe/stripe-js": "^1.11.0",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
