--- a/react-app/.env.production
+++ b/react-app/.env.production
@@ -2,7 +2,7 @@
 SKIP_PREFLIGHT_CHECK=true
 
 # Api server url
-REACT_APP_API_URL=https://trilloapi.azurewebsites.net/api
+REACT_APP_API_URL=https://localhost:5001/api
 
 # Stripe public key
 STRIPE_PUBLIC_KEY=pk_test_XekBDuUTsqK2y3u8ETkTsg9k007BGBHrUK
