--- a/react-app/package.json
+++ b/react-app/package.json
@@ -20,6 +20,7 @@
         "history": "^5.0.0",
         "lodash": "^4.17.20",
         "react": "^16.13.1",
+        "react-cookie": "^4.0.3",
         "react-dom": "^16.13.1",
         "react-hook-form": "^6.4.0",
         "react-redux": "^7.2.0",
